feat: アリーナ・待機場・戦闘エリアの分離と紐づけ機能
- /arena create でチーム指定を任意に変更（後から追加可能）
- /arena team add <チーム名> でチーム後追加
- /arena area save/list/delete/info で待機場を永続保存
- /arena team area <チーム名> [待機場名] で保存済み待機場をリンク可能
- /arena field save/load/list/delete で戦闘エリアを永続保存・リンク
- AreaStore, FieldStore を新規追加（YAML永続化）
- AreaSubCommand を新規追加
- ArenaSession コンストラクタで空チームリストを許容
- ArenaSession.addTeam() メソッド追加
- テスト更新・追加（257テスト全パス）